# penv-manager

./: Cargo.toml  README.md  install.sh
docs/: index.html
src/: command.rs  config.rs  main.rs
src/command/: default.rs  init.rs  show.rs  update.rs
src/utils/: repo.rs
