[package]
name = "sb_penvman_cli"
version = "0.1.3"
edition = "2024"

[dependencies]

anyhow = "1.0.98"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
bpaf = { version = "0.9.15", features = ["derive"] }
toml = "0.8.20"
spinners = "4.1.1"
git2 = "0.20.2"
chrono = "0.4.41"
